# tasks_new

./: .gitignore  .local.env.example  Makefile  alembic.ini  dependecy.py  docker-compose.yaml  fixtures.py  pyproject.toml  settings.py
alembic/versions/: 032e35231e68_add_user_id_in_tasks.py  398bf2b283c2_update.py  4f222d699da1_update.py  52e8def429a1_first.py  9d53ff89ba82_optional_token.py  c55f61c346bf_add_user_google.py  ca26e73aab6c_.py  cb5763cf2e1c_type.py  faf833d414bc_delete_token.py
app/: dependecy.py  exception.py  main.py  settings.py
app/clients/: __init__.py  google.py  yandex.py
app/handlers/: __init__.py  auth.py  tasks.py  users.py
app/infrastructure/: gunicorn.conf.py
app/infrastructure/cache/: accessor.py
app/infrastructure/database/: __init__.py  accessor.py  database.py
app/models/: __init__.py  category.py  task.py
app/repository/: __init__.py  cache_task.py  task.py  user.py
app/schema/: __init__.py  user.py
app/service/: __init__.py  auth.py  task.py  user.py
app/tasks/: handlers.py  schema.py  service.py
app/tasks/repositories/: __init__.py  cache_repository.py  repository.py
app/users/auth/: handlers.py  service.py
app/users/auth/clients/: __init__.py  google.py  (+1 more)
app/users/user/: handlers.py  models.py  repository.py  schema.py  service.py
cache/: accessor.py
clients/: __init__.py  google.py  yandex.py
database/: __init__.py  accessor.py
handlers/: __init__.py  auth.py  ping.py  tasks.py  users.py
models/: __init__.py  category.py  task.py  user.py
repository/: cache_task.py  task.py  user.py
schema/: __init__.py  auth.py  user.py
service/: auth.py  task.py  user.py
tests/: conftest.py
tests/fixtures/auth/: auth_service.py  clients.py
tests/fixtures/users/: user_repository.py
tests/unit/: test_test.py
tests/unit/auth/: test_auth_service.py
