[tool.poetry]
name = "tasks"
version = "0.1.0"
description = ""
authors = ["ramdirt <ramdirt@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
redis = "^5.0.4"
python-jose = "^3.3.0"
requests = "^2.31.0"
httpx = "^0.27.0"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
gunicorn = "^22.0.0"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
twisted = "^24.3.0"
pytest-trio = "^0.8.0"
pytest-twisted = "^1.14.1"
pytest-factoryboy = "^2.7.0"
anyio = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
